--- a/example.yaml
+++ b/example.yaml
@@ -22,9 +22,13 @@ api:
 
 uart:
   id: rs485_bus
-  tx_pin: GPIO17
-  rx_pin: GPIO16
-  baud_rate: 9600
+  tx_pin: GPIO15
+  rx_pin: GPIO13
+  baud_rate: 115200
+  data_bits: 8
+  parity: NONE
+  stop_bits: 1
+  rx_buffer_size: 4096
 
 external_components:
   - source:
